--- a/index.html
+++ b/index.html
@@ -9,36 +9,43 @@
   </head>
   <body>
     <header>
-      <nav>
-        <h3>G3 Architects</h3>
-        <ul>
-          <li>Home</li>
-          <li>About</li>
-          <li>Contact</li>
-          <li>Login</li>
-        </ul>
-      </nav>
-      <section class="first-section">
-        <h1 class="logo">Brand New Group of Architects</h1>
-        <p>
-          There are many variations of passages of Lorem Ipsum available, but
-          the majority have suffered alteration in some form, by injected
-          humour, or randomised words which don't look even
-        </p>
-        <button class="primary-btn">Explore More</button>
-        <img class="banner-img" src="images/banner.png" alt="" />
-      </section>
+      <div class="first-zone">
+        <nav>
+          <h3 class="logo">G3 Architects</h3>
+          <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Contact</li>
+            <li>Login</li>
+          </ul>
+        </nav>
+        <section class="first-section">
+          <div class="first-details">
+            <h1 class="first-title">Brand New Group of Architects</h1>
+            <p>
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised words which don't look even
+            </p>
+          </div>
+          <button class="primary-btn">Explore More</button>
+          <img class="banner-img" src="images/banner.png" alt="" />
+        </section>
+      </div>
     </header>
     <main>
       <section class="second-section">
-        <div class="4-img">
+        <div class="four-img">
           <img src="images/team1.png" />
           <img src="images/team2.png" />
           <img src="images/team3.png" />
           <img src="images/team4.png" />
         </div>
-        <div class="details">
-          <h3 class="second-title">Quick list of Our Features</h3>
+        <div class="second-details">
+          <h3 class="second-title">
+            <span class="quick-list"> Quick list </span>of Our
+            <span class="features"> Features</span>
+          </h3>
           <p>
             There are many variations of passages of Lorem Ipsum available, but
             the majority have suffered alteration in some form, by injected
@@ -48,10 +55,104 @@
         </div>
       </section>
       <section class="third-section">
-        <div class="third-details">h3</div>
-        <div class="third-img"></div>
+        <div class="third-details">
+          <h3 class="third-title">Features you will love & enjoy</h3>
+          <p class="third-description">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <div class="cards">
+            <div class="card">
+              <h6>Dexktop & Mobile Version</h6>
+              <p>
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
+            </div>
+            <div class="card">
+              <h6>Drag & Drop Builder</h6>
+              <p>
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
+            </div>
+            <div class="card">
+              <h6>Awesome Modern Design</h6>
+              <p>
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
+            </div>
+            <div class="card">
+              <h6>Super Easy to Edit</h6>
+              <p>
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="third-img">
+          <img src="images/architect.png" alt="" />
+        </div>
+      </section>
+      <section class="fourth-section">
+        <button class="bg-btn">
+          10+Year
+          <p><span> Experience</span></p>
+        </button>
+      </section>
+      <section class="fifth-section">
+        <h3>Some Facts</h3>
+        <p>
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration.
+        </p>
+      </section>
+      <section class="sixth-section">
+        <div class="data">
+          <img src="images/icons/ribon.png" alt="" />
+          <h3>54</h3>
+          <p>Awards Winnings</p>
+        </div>
+        <div class="data">
+          <img src="images/icons/projects.png" alt="" />
+          <h3>1458</h3>
+          <p>Project Finished</p>
+        </div>
+        <div class="data">
+          <img src="images/icons/customers.png" alt="" />
+          <h3>590</h3>
+          <p>Clients Eorked</p>
+        </div>
+        <div class="data">
+          <img src="images/icons/email.png" alt="" />
+          <h3>22578</h3>
+          <p>Email Send</p>
+        </div>
+      </section>
+      <section class="last-section">
+        <h3>Our Sponspors</h3>
+        <p>
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration.
+        </p>
+        <div class="brand-imgs">
+          <img class="brand-img" src="images/sponsors/spotify.png" />
+          <img class="brand-img" src="images/sponsors/amazon.png" />
+          <img class="brand-img" src="images/sponsors/google.png" />
+          <img class="brand-img" src="images/sponsors/telerama.png" />
+          <img class="brand-img" src="images/sponsors/figma.png" />
+        </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <h6>All rights reserved copyright@2023 startup landing page design</h6>
+    </footer>
   </body>
 </html>
