--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <span class="quick-list"> Quick list </span>of Our
             <span class="features"> Features</span>
           </h3>
-          <p>
+          <p class="second-p">
             There are many variations of passages of Lorem Ipsum available, but
             the majority have suffered alteration in some form, by injected
             humour, or randomised words which don't look even
