--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
           <button class="primary-btn">Explore More</button>
         </div>
       </section>
+
       <section class="third-section">
         <div class="third-details">
           <h3 class="third-title">Features you will love & enjoy</h3>
@@ -98,23 +99,23 @@
           </div>
         </div>
         <div class="third-img">
-          <img src="images/architect.png" alt="" />
+          <img src="images/architect.png" />
+          <button class="bg-btn">
+            10+Year
+            <p><span> Experience</span></p>
+          </button>
         </div>
       </section>
+
       <section class="fourth-section">
-        <button class="bg-btn">
-          10+Year
-          <p><span> Experience</span></p>
-        </button>
-      </section>
-      <section class="fifth-section">
         <h3>Some Facts</h3>
         <p>
           There are many variations of passages of Lorem Ipsum available, but
           the majority have suffered alteration.
         </p>
       </section>
-      <section class="sixth-section">
+
+      <section class="fifth-section">
         <div class="data">
           <img src="images/icons/ribon.png" alt="" />
           <h3>54</h3>
@@ -136,6 +137,7 @@
           <p>Email Send</p>
         </div>
       </section>
+
       <section class="last-section">
         <h3>Our Sponspors</h3>
         <p>
@@ -151,6 +153,7 @@
         </div>
       </section>
     </main>
+
     <footer>
       <h6>All rights reserved copyright@2023 startup landing page design</h6>
     </footer>
