--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
       </section>
 
       <section class="fourth-section">
-        <h3>Some Facts</h3>
-        <p>
+        <h3 class="fourth-title">Some Facts</h3>
+        <p class="fourth-description">
           There are many variations of passages of Lorem Ipsum available, but
           the majority have suffered alteration.
         </p>
@@ -139,7 +139,7 @@
       </section>
 
       <section class="last-section">
-        <h3>Our Sponspors</h3>
+        <h3 class="fourth-title">Our Sponspors</h3>
         <p>
           There are many variations of passages of Lorem Ipsum available, but
           the majority have suffered alteration.
