--- a/index.html
+++ b/index.html
@@ -139,11 +139,13 @@
       </section>
 
       <section class="last-section">
-        <h3 class="fourth-title">Our Sponspors</h3>
-        <p>
-          There are many variations of passages of Lorem Ipsum available, but
-          the majority have suffered alteration.
-        </p>
+        <div class="last-details">
+          <h3 class="fourth-title">Our Sponspors</h3>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration.
+          </p>
+        </div>
         <div class="brand-imgs">
           <img class="brand-img" src="images/sponsors/spotify.png" />
           <img class="brand-img" src="images/sponsors/amazon.png" />
@@ -155,7 +157,9 @@
     </main>
 
     <footer>
-      <h6>All rights reserved copyright@2023 startup landing page design</h6>
+      <div class="footer">
+        <h6>All rights reserved copyright@2023 startup landing page design</h6>
+      </div>
     </footer>
   </body>
 </html>
