--- a/index.html
+++ b/index.html
@@ -156,6 +156,19 @@
           <img class="brand-img" src="images/sponsors/figma.png" />
         </div>
       </section>
+      <section class="updates">
+        <h3 class="section-title">Get My Updates</h3>
+        <p class="section-description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam,
+          similique!
+        </p>
+        <form class="content-update">
+            <div>
+          <input type="email" name="email" id="email" placeholder="Your Email" />
+          <div/>
+          <div><button class="primary-btn" for="email"email">Subscribe</button></div>
+        </form>
+      </section>
     </main>
 
     <footer>
